Adding admin templates in dashboard that show the different registers of the tables: Productos,Proveedores,Usuarios

--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -4,7 +4,17 @@
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Producto</button>
   </div>
 </div>
+
 <div class="panel-content">
-  <!-- Aquí irá la tabla de productos -->
-  <p>Contenido de la tabla de productos...</p>
+  <table id="productsTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Categoría</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
