--- a/Private/admin-suppliers.html
+++ b/Private/admin-suppliers.html
@@ -4,7 +4,19 @@
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Proveedor</button>
   </div>
 </div>
+
 <div class="panel-content">
-  <!-- Aquí irá la tabla de proveedores -->
-  <p>Contenido de la tabla de proveedores...</p>
+  <table id="suppliersTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Teléfono</th>
+        <th>Correo</th>
+        <th>Dirección</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
