--- a/Private/admin-users.html
+++ b/Private/admin-users.html
@@ -4,7 +4,22 @@
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Usuario</button>
   </div>
 </div>
+
 <div class="panel-content">
-  <!-- Aquí irá la tabla de usuarios -->
-  <p>Contenido de la tabla de usuarios...</p>
+  <table id="usersTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Paterno</th>
+        <th>Materno</th>
+        <th>Correo</th>
+        <th>Teléfono</th>
+        <th>Género</th>
+        <th>Tipo</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
