--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <header class="main-header">
-            <a href="index.html" class="logo">
+            <a href="" class="logo">
                 <img src="Font/imgs/mount logo.jpg" alt="Logo de Ferretería CNC" >
             </a>
 
