arreglo de la tabla del dashboard

--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="panel-content">
-  <table id="productsTable">
+  <table id="productsTable" class="admin-table">
     <thead>
       <tr>
         <th>ID</th>
