--- a/Private/admin-suppliers.html
+++ b/Private/admin-suppliers.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="panel-content">
-  <table id="suppliersTable">
+  <table id="suppliersTable" class="admin-table">
     <thead>
       <tr>
         <th>ID</th>
