--- a/Private/admin-users.html
+++ b/Private/admin-users.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="panel-content">
-  <table id="usersTable">
+  <table id="usersTable" class="admin-table">
     <thead>
       <tr>
         <th>ID</th>
