--- a/Private/admin-suppliers.html
+++ b/Private/admin-suppliers.html
@@ -47,6 +47,7 @@
   </form>
 </div>
 
+
 <div id="modal-agregar-proveedor" class="modal" style="display: none;">
   <form id="form-agregar-proveedor" class="modal-content">
     <h2>Agregar nuevo proveedor</h2>
@@ -63,5 +64,6 @@
     <input type="text" id="nuevo-proveedor-direccion">
 
     <button type="submit" class="btn-guardar">Guardar</button>
+    <button type="button" class="btn-cancelar" onclick="document.getElementById('modal-agregar-proveedor').style.display='none'">Cancelar</button>
   </form>
 </div>
