--- a/Font/signup.html
+++ b/Font/signup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="../Font/signup.js" defer></script>
+    <link rel="icon" type="image/png" href="Font/imgs/mount logo.jpg">
 </head>
 
 <body>
