--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <header class="main-header">
             <a href="" class="logo">
-                <img src="Font/imgs/mount logo.jpg" alt="Logo de Ferretería CNC" >
+                <img src="Font/imgs/mount logo.png" alt="Logo de Ferretería CNC" >
             </a>
 
             <div class="header-content">
