cambio del logo

--- a/Font/signup.html
+++ b/Font/signup.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="../Font/signup.js" defer></script>
-    <link rel="icon" type="image/png" href="Font/imgs/mount logo.jpg">
+    <link rel="icon" type="image/png" href="Font/imgs/mount logo.png">
 </head>
 
 <body>
     <div class="formulario">
         <div class="logo">
-            <img src="imgs/mount logo.jpg" alt="Logo de la plataforma">
+            <img src="imgs/mount logo.png" alt="Logo de la plataforma">
         </div>
         <h1>Crear Cuenta</h1>
         <form id="signupForm">
