--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Ferretería CNC - Componentes y Herramientas</title>
         <link rel="stylesheet" href="Font/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-        <link rel="icon" type="image/png" href="Font/imgs/mount logo.jpg">
+        <link rel="icon" type="image/png" href="Font/imgs/mount logo.png">
     </head>
     <body>
         <div class="top-bar">
