--- a/Private/dashboard.html
+++ b/Private/dashboard.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/Font/dashboard.css" />
   <link rel="stylesheet" href="/Font/index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+  <link rel="icon" type="image/png" href="/Font/imgs/mount logo.png">
 </head>
 <body>
   <div class="top-bar">
@@ -19,7 +20,7 @@
   </div>
   <header class="main-header">
     <a href="/" class="logo">
-      <img src="/Font/imgs/mount logo.jpg" alt="Logo de Ferretería CNC">
+      <img src="/Font/imgs/mount logo.png" alt="Logo de Ferretería CNC">
     </a>
     <div class="header-content">
       <nav class="main-nav">
