ajustes en el rendimiento

--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -5,7 +5,9 @@
     <button class="btn-upload-excel" onclick="document.getElementById('excelProductos').click()">
       <i class="fa-solid fa-file-excel"></i> Cargar desde Excel
     </button>
-    <input type="file" id="excelProductos" accept=".xlsx, .xls" style="display:none" onchange="subirExcelProductos(this.files[0])">
+    <input type="file" id="excelProductos" accept=".xlsx, .xls" style="display:none">
+    <span id="excel-productos-filename" class="file-name-display"></span>
+    <button id="btn-confirm-excel-upload" class="btn-add-new" style="display:none; background-color: #1D6F42;">Subir Archivo</button>
   </div>
 </div>
 
@@ -54,8 +56,13 @@
         </div>
         <div class="form-group form-group-full" style="margin-top: 1.5rem;">
             <label for="edit-producto-imagen">Imagen del Producto</label>
-            <input type="file" id="edit-producto-imagen" name="imagen_producto" accept="image/*">
-            <img id="edit-imagen-preview" src="" alt="Previsualización" style="max-width: 100px; max-height: 100px; margin-top: 10px; display: none;">
+            <div style="display: flex; align-items: center; gap: 20px;">
+                <input type="file" id="edit-producto-imagen" name="imagen_producto" accept="image/*" />
+                <div id="edit-imagen-container" style="position: relative; display: none;">
+                  <img id="edit-imagen-preview" src="" alt="Previsualización" style="max-width: 100px; max-height: 100px; border-radius: 6px; object-fit: cover;" />
+                  <button type="button" id="btn-remove-image" class="remove-image-btn" title="Quitar imagen">&times;</button>
+                </div>
+            </div>
         </div>
         <button type="submit" class="btn-submit">Guardar Cambios</button>
       </form>
