--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -73,7 +73,7 @@
 <!-- Modal para agregar producto -->
 <div id="modal-agregar-producto" class="modal" style="display:none;">
   <div class="modal-overlay"></div>
-  <div class="modal-content">
+  <div class="modal-content" style="max-width: 800px;">
     <div class="modal-header">
       <h2>Agregar Nuevo Producto</h2>
       <button class="modal-close-btn">&times;</button>
