--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -41,7 +41,7 @@
         <div class="form-grid">
           <div class="form-group">
             <label for="edit-producto-nombre">Nombre</label>
-            <input type="text" id="edit-producto-nombre" required>
+            <input type="text" id="edit-producto-nombre" required maxlength="49">
           </div>
           <div class="form-group">
             <label for="edit-producto-categoria">Categoría</label>
@@ -73,17 +73,17 @@
 <!-- Modal para agregar producto -->
 <div id="modal-agregar-producto" class="modal" style="display:none;">
   <div class="modal-overlay"></div>
-  <div class="modal-content" style="max-width: 800px;">
+  <div class="modal-content" style="max-width: 900px;">
     <div class="modal-header">
       <h2>Agregar Nuevo Producto</h2>
       <button class="modal-close-btn">&times;</button>
     </div>
     <div class="modal-body">
       <form id="form-agregar-producto" enctype="multipart/form-data">
-        <div class="form-grid">
+        <div class="form-grid" style="grid-template-columns: 1fr 1fr;">
           <div class="form-group">
             <label for="nuevo-producto-nombre">Nombre</label>
-            <input type="text" id="nuevo-producto-nombre" required>
+            <input type="text" id="nuevo-producto-nombre" required maxlength="49">
           </div>
            <div class="form-group">
             <label for="nuevo-producto-imagen">Imagen del Producto</label>
