--- a/Private/modal-editar-usuario.html
+++ b/Private/modal-editar-usuario.html
@@ -12,7 +12,7 @@
         <div class="form-grid">
           <div class="form-group">
             <label for="edit-usuario-nombre">Nombre</label>
-            <input type="text" id="edit-usuario-nombre" required>
+            <input type="text" id="edit-usuario-nombre" required maxlength="29">
           </div>
           <div class="form-group">
             <label for="edit-usuario-paterno">Apellido Paterno</label>
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <label for="edit-usuario-correo">Correo</label>
-            <input type="email" id="edit-usuario-correo" required>
+            <input type="email" id="edit-usuario-correo" required maxlength="35">
           </div>
           <div class="form-group">
             <label for="edit-usuario-telefono">Teléfono</label>
